# python-project-lvl1

./: Makefile  README.md  pyproject.toml
brain_games/: engine.py
brain_games/games/: even.py
