[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = ["F1aer <art.ilykhov@gmail.com>"]
packeges = [
  { include = "brain_games" },
]
[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
